--- a/10-formulario.html
+++ b/10-formulario.html
@@ -34,11 +34,11 @@
             <input type="checkbox" name="interesses[]" id="sql" value="SQL">
             <label for="sql">SQL</label>
 
-            <input type="checkbox" name="interesses[]" id="java" value="JAVA">
-            <label for="java">JAVA</label>
+            <input type="checkbox" name="interesses[]" id="java" value="Java">
+            <label for="java">Java</label>
 
-            <input type="checkbox" name="interesses[]" id="python" value="PYTHON">
-            <label for="python">PYTHON</label>
+            <input type="checkbox" name="interesses[]" id="python" value="Python">
+            <label for="python">Python</label>
 
         </div>
 
